1.5/_sources/modules/generated/sklearn.feature_selection.SequentialFeatureSelector.rst.txt
SequentialFeatureSelector
=========================

.. currentmodule:: sklearn.feature_selection

.. autoclass:: SequentialFeatureSelector
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.SequentialFeatureSelector sklearn.feature_selection.SequentialFeatureSelector.__init__ sklearn.feature_selection.SequentialFeatureSelector.fit sklearn.feature_selection.SequentialFeatureSelector.fit_transform sklearn.feature_selection.SequentialFeatureSelector.get_feature_names_out sklearn.feature_selection.SequentialFeatureSelector.get_metadata_routing sklearn.feature_selection.SequentialFeatureSelector.get_params sklearn.feature_selection.SequentialFeatureSelector.get_support sklearn.feature_selection.SequentialFeatureSelector.inverse_transform sklearn.feature_selection.SequentialFeatureSelector.set_output sklearn.feature_selection.SequentialFeatureSelector.set_params sklearn.feature_selection.SequentialFeatureSelector.transform 
   :add-heading: Gallery examples
   :heading-level: -