1.7/_sources/modules/generated/sklearn.feature_selection.SequentialFeatureSelector.rst.txt
SequentialFeatureSelector
=========================

.. currentmodule:: sklearn.feature_selection

.. autoclass:: SequentialFeatureSelector
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.SequentialFeatureSelector sklearn.feature_selection.SequentialFeatureSelector.__delattr__ sklearn.feature_selection.SequentialFeatureSelector.__dir__ sklearn.feature_selection.SequentialFeatureSelector.__eq__ sklearn.feature_selection.SequentialFeatureSelector.__format__ sklearn.feature_selection.SequentialFeatureSelector.__ge__ sklearn.feature_selection.SequentialFeatureSelector.__getattribute__ sklearn.feature_selection.SequentialFeatureSelector.__getstate__ sklearn.feature_selection.SequentialFeatureSelector.__gt__ sklearn.feature_selection.SequentialFeatureSelector.__hash__ sklearn.feature_selection.SequentialFeatureSelector.__init__ sklearn.feature_selection.SequentialFeatureSelector.__init_subclass__ sklearn.feature_selection.SequentialFeatureSelector.__le__ sklearn.feature_selection.SequentialFeatureSelector.__lt__ sklearn.feature_selection.SequentialFeatureSelector.__ne__ sklearn.feature_selection.SequentialFeatureSelector.__new__ sklearn.feature_selection.SequentialFeatureSelector.__reduce__ sklearn.feature_selection.SequentialFeatureSelector.__reduce_ex__ sklearn.feature_selection.SequentialFeatureSelector.__repr__ sklearn.feature_selection.SequentialFeatureSelector.__setattr__ sklearn.feature_selection.SequentialFeatureSelector.__setstate__ sklearn.feature_selection.SequentialFeatureSelector.__sizeof__ sklearn.feature_selection.SequentialFeatureSelector.__sklearn_clone__ sklearn.feature_selection.SequentialFeatureSelector.__sklearn_tags__ sklearn.feature_selection.SequentialFeatureSelector.__str__ sklearn.feature_selection.SequentialFeatureSelector.__subclasshook__ sklearn.feature_selection.SequentialFeatureSelector._build_request_for_signature sklearn.feature_selection.SequentialFeatureSelector._get_best_new_feature_score sklearn.feature_selection.SequentialFeatureSelector._get_default_requests sklearn.feature_selection.SequentialFeatureSelector._get_doc_link sklearn.feature_selection.SequentialFeatureSelector._get_metadata_request sklearn.feature_selection.SequentialFeatureSelector._get_param_names sklearn.feature_selection.SequentialFeatureSelector._get_params_html sklearn.feature_selection.SequentialFeatureSelector._get_support_mask sklearn.feature_selection.SequentialFeatureSelector._html_repr sklearn.feature_selection.SequentialFeatureSelector._repr_html_inner sklearn.feature_selection.SequentialFeatureSelector._repr_mimebundle_ sklearn.feature_selection.SequentialFeatureSelector._transform sklearn.feature_selection.SequentialFeatureSelector._validate_params sklearn.feature_selection.SequentialFeatureSelector.fit sklearn.feature_selection.SequentialFeatureSelector.fit_transform sklearn.feature_selection.SequentialFeatureSelector.get_feature_names_out sklearn.feature_selection.SequentialFeatureSelector.get_metadata_routing sklearn.feature_selection.SequentialFeatureSelector.get_params sklearn.feature_selection.SequentialFeatureSelector.get_support sklearn.feature_selection.SequentialFeatureSelector.inverse_transform sklearn.feature_selection.SequentialFeatureSelector.set_output sklearn.feature_selection.SequentialFeatureSelector.set_params sklearn.feature_selection.SequentialFeatureSelector.transform 
   :add-heading: Gallery examples
   :heading-level: -